css/styles.css
html {
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

:root {
  --text-color: #757575;
  --primary-text-color: #212121;
  --accent-color: #2196f3;
  --primary-white-color: #ffffff;
  --secondary-bg-color: #f5f4fa;
  --footer-contact-color: rgba(255, 255, 255, 0.6);
}

body {
  background-color: var(--primary-white-color);
  color: var(--primary-text-color);

  font-family: Roboto, Arial, sans-serif;
  font-weight: 400;
  font-size: 14px;
  letter-spacing: 0.03em;
  line-height: 1.17;
}

/* Утилиты */

.list {
  padding: 0;
  margin: 0;
  list-style: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
  padding: 0;
}

.container {
  margin-left: auto;
  margin-right: auto;
  width: 1200px;
  padding-left: 15px;
  padding-right: 15px;
}

.main-nav {
  display: flex;
  align-items: center;
  border-bottom: 1px solid #ececec;
}

.nav {
  display: flex;
  align-items: center;
}

.site-nav {
  display: flex;
  margin-left: 93px;
}

.site-nav .item + .item,
.address-nav .item + .item {
  margin-left: 50px;
}

.address-nav {
  display: flex;
  margin-left: auto;
}

.logo {
  color: var(--primary-text-color);
  font-family: Raleway, sans-serif;
  font-weight: 700;
  font-size: 26px;
  line-height: 1.19;
  text-decoration: none;
}

.accent {
  color: var(--accent-color);
}

/* Navigation */

.site-nav .link {
  display: block;
  padding-top: 32px;
  padding-bottom: 32px;

  color: var(--primary-text-color);
}

.site-nav .link:hover,
.site-nav .link:focus {
  color: var(--accent-color);
}

.link {
  font-weight: 500;
  line-height: 1.14;
  letter-spacing: 0.02em;
  text-decoration: none;
}

.link:active {
  color: var(--accent-color);
}

.link.current {
  color: var(--accent-color);
}

.address-nav .link {
  display: block;
  padding-top: 32px;
  padding-bottom: 32px;

  color: var(--text-color);
}

.address-nav .link:hover,
.address-nav .link:focus {
  color: var(--accent-color);
}

/* Hero */

.hero {
  padding-top: 200px;
  padding-bottom: 200px;
  background-color: #2f303a;
}

.hero-title {
  margin-top: 0;
  margin-bottom: 30px;

  color: var(--primary-white-color);

  font-weight: 900;
  font-size: 44px;
  line-height: 1.36;
  text-align: center;
  letter-spacing: 0.06em;
  text-transform: uppercase;
}

.btn-wrap {
  display: flex;
  justify-content: center;
  align-items: center;
}

.btn-primary {
  padding: 10px 32px;
  min-width: 200px;
  border: 0;
  border-radius: 4px;

  color: var(--primary-white-color);
  background-color: var(--accent-color);

  font-family: inherit;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.88;
  letter-spacing: 0.06em;

  cursor: pointer;
}

.btn-primary:hover,
.btn-primary:focus {
  color: var(--accent-color);
  background-color: var(--primary-white-color);
}

/* Section */

.hidden-title {
  display: none;
}

.feature-list {
  display: flex;
  flex-wrap: wrap;
  padding-top: 94px;
}

.feature-list .item {
  width: 270px;
}

.item-list:not(:last-child) {
  margin-right: 30px;
}

.feature-list .title {
  font-size: 14px;
  font-weight: 700;
  line-height: 1.14;
  text-transform: uppercase;
}

.list .text {
  margin-top: 10px;
  margin-bottom: 0;
  color: var(--text-color);

  line-height: 1.71;
}

.section-title {
  padding-top: 94px;
  color: var(--primary-text-color);

  font-weight: 700;
  font-size: 36px;
  line-height: 1.17;
  text-align: center;
}

.img-list {
  display: flex;
  flex-wrap: wrap;
  margin-top: 50px;
  padding-bottom: 94px;
}

.img-list .item:not(:last-child) {
  margin-right: 30px;
}

/* Features */

.features-items .title {
  color: var(--primary-text-color);
}

/* Members */

.members-wrap {
  background-color: var(--secondary-bg-color);
}

.member-items {
  display: flex;
  flex-wrap: wrap;
  margin-top: 50px;
  padding-bottom: 94px;
}

.member-items .item {
  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
    0px 2px 1px rgba(0, 0, 0, 0.2);
  border-radius: 0px 0px 4px 4px;
}

.member-items .item:not(:last-child) {
  margin-right: 30px;
}

.member-items .name {
  margin-top: 30px;
  margin-bottom: 0;

  color: var(--primary-text-color);

  font-weight: 500;
  font-size: 16px;
  line-height: 1.19;
  text-align: center;
}

.member-items .text {
  margin-top: 10px;

  font-size: 16px;
  line-height: 1.19;
  text-align: center;
}

/* Footer */

.page-footer {
  padding-top: 60px;
  background-color: #2f303a;
}

.logo.footer {
  color: var(--primary-white-color);
}

.footer-items {
  padding-bottom: 60px;
}

.footer-items .address {
  display: block;
  margin-top: 20px;

  color: var(--primary-white-color);
}

.footer-items .contact {
  display: block;
  margin-top: 9px;

  color: var(--footer-contact-color);
}

.footer-items .link:hover,
.footer-items .link:focus {
  color: var(--accent-color);
}

.footer-items .link {
  font-weight: inherit;
  line-height: 1.71;
  text-decoration: none;
  font-style: normal;
}

/* PORTFOLIO */
/* Buttons */

.portfolio-wrap {
  padding-top: 94px;
  padding-bottom: 94px;
}

/* .bnt-container {
  margin-top: 94px;
} */

.filter-items {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.filter-items .item:not(:last-child) {
  margin-right: 8px;
}

.btn-filter {
  padding: 6px 22px;
  border: 0;
  border-radius: 4px;

  color: var(--primary-text-color);
  background-color: var(--secondary-bg-color);

  font-family: inherit;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.62;
  letter-spacing: inherit;
  cursor: pointer;
}

.btn-filter:hover,
.btn-filter:focus {
  color: var(--primary-white-color);
  background-color: var(--accent-color);
}

.btn-filter.current {
  color: var(--primary-white-color);
  background-color: var(--accent-color);

  cursor: pointer;
}

/* Heading Portfolio */

.examples-items {
  display: flex;
  flex-wrap: wrap;
  margin-top: 50px;
}

.examples-items .item {
  width: 370px;
}

.examples-items .item:not(:nth-child(3n)) {
  margin-right: 30px;
}

.examples-items .item:not(:nth-last-child(-n + 3)) {
  margin-bottom: 30px;
}

.examples-items .heading {
  margin-top: 20px;
  margin-bottom: 0;
  margin-left: 24px;

  color: var(--primary-text-color);

  font-weight: 700;
  font-size: 18px;
  line-height: 2;
  letter-spacing: 0.06em;
}

.examples-items .heading:hover,
.examples-items .heading:focus {
  color: var(--accent-color);
}

.examples-items .text {
  margin-top: 4px;
  margin-bottom: 20px;
  margin-left: 24px;

  font-size: 16px;
  line-height: 1.88;
  font-weight: 400;
}

.examples-items .text:hover,
.examples-items .text:focus {
  color: var(--accent-color);
}

